testdata/golden/sema/valid/entrypoint_module_single/only.sg
pragma module;

@entrypoint
fn main() {}
