testdata/golden/sema/invalid/entrypoint_no_body/only.sg
pragma module;

@entrypoint
fn missing_body();
